# puma-project

./: .gitignore  clean_for_jetson.sh  install_jetson_boot.sh  install_minipc_monitor_arduino.sh  install_pumapc_boot.sh  install_robot_status.sh  make_exec_py.sh  prepare_for_jetson.sh  prepare_for_minipc.sh
puma_jetson/puma_bringup_jetson/: CMakeLists.txt  README.md  package.xml  setup.py
puma_jetson/puma_bringup_jetson/config/: controller_params.yaml  imu_calib.yaml  jetson_params.yaml  joy_params.yaml  ublox_config.yaml  zed_f9p.yaml
puma_jetson/puma_bringup_jetson/launch/: camera_odom.launch  imu_bringup.launch  imu_test.launch  jetson_bringup.launch  jetson_supervised_bringup.launch  puma_bringup.launch  rosbridge_server.launch  slam_rtabmap.launch
puma_jetson/puma_bringup_jetson/launch/core/: arduino.launch  control_mode.launch  controller.launch  filter_imu_realsense.launch  gps_ublox.launch  jetson_monitor.launch  joy.launch  odom_rtabmap.launch  parking.launch  realsense.launch  reverse.launch
puma_jetson/puma_bringup_jetson/scripts/: manager_node.py  supervisor_manager_launcher.py  supervisor_manager_process.py
puma_jetson/puma_bringup_jetson/scripts/puma_bringup_jetson/: node_supervisor.py  node_supervisor_launch.py
puma_minipc/puma_bringup/: CMakeLists.txt  README.md  package.xml  setup.py
puma_minipc/puma_bringup/config/: localization_params.yaml  navigation_params.yaml  navsat.yaml  navsat_example.yaml
puma_minipc/puma_bringup/config/nav/: base_global_planner.yaml  costmap_common.yaml  dwa_planner.yaml  local_costmap.yaml  puma_dwa_planner.yaml  teb_cmdvel.yaml
puma_minipc/puma_bringup/config/nav_puma/: costmap_common.yaml  hybrid_puma_planner.yaml  puma_dwa_planner.yaml
puma_minipc/puma_bringup/config/nav_slam/: costmap_common.yaml  global_costmap.yaml  hybrid_puma_planner.yaml  local_costmap.yaml  puma_dwa_planner.yaml
puma_minipc/puma_bringup/config/nav_static_map/: costmap_common.yaml  costmap_common_laser.yaml  global_costmap.yaml  hybrid_puma_planner.yaml  local_costmap.yaml  puma_dwa_planner.yaml
puma_minipc/puma_bringup/config/nav_test/: global_costmap.yaml  teb_cmdvel.yaml
puma_minipc/puma_bringup/config/new_nav/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  puma_dwa_planner.yaml  puma_global_planner.yaml  puma_local_planner.yaml
puma_minipc/puma_bringup/launch/: camera_bringup.launch  dwa_navigation_bringup.launch  localization_bringup.launch  minipc_base.launch  minipc_bringup.launch  puma_bringup.launch  puma_navigation_bringup.launch  puma_slam_bringup.launch  puma_supervisor.launch  puma_supervisor_slam.launch  slam_rtabmap.launch  visual_odometry.launch
puma_minipc/puma_bringup/launch/core/: arduino.launch  depthimage_to_laserscan.launch  dwa_navigation_bringup.launch  imu_filter_realsense.launch  localization_bringup.launch  minipc_monitor.launch  nav_manager.launch  new_navigation_bringup.launch  puma_navigation_bringup.launch  puma_slam_navigation_bringup.launch  realsense_camera.launch  slam_rtabmap.launch  visual_odometry.launch  (+1 more)
puma_minipc/puma_bringup/map/: blank_map.yaml
puma_minipc/puma_bringup/rviz/: navigation.rviz
puma_minipc/puma_bringup/scripts/: supervisor_manager.py  supervisor_manager_slam.py
puma_minipc/puma_global_planner/: CMakeLists.txt  README.md  package.xml  puma_global_planner.xml
puma_minipc/puma_global_planner/cfg/: PumaGlobalPlanner.cfg
puma_minipc/puma_global_planner/src/: puma_global_planner.cpp
puma_minipc/puma_local_planner/: CMakeLists.txt  README.md  package.xml  puma_local_planner_plugin.xml
puma_minipc/puma_local_planner/cfg/: PumaLocalPlanner.cfg
puma_minipc/puma_local_planner/src/: puma_local_planner.cpp
puma_minipc/puma_model_3d/: CMakeLists.txt  package.xml
puma_minipc/puma_model_3d/launch/: display.launch  gazebo.launch
puma_minipc/puma_model_3d/meshes/: base_link.STL  camara_trasera_link.STL  imu_link.STL  wheel_left_front_link.STL  wheel_right_back_link.STL  wheel_right_front_link.STL
puma_minipc/puma_model_3d/urdf/: d455.urdf.xacro  d455_2.urdf.xacro  puma_model_3d.csv  puma_model_3d.gazebo.xacro  puma_model_3d.urdf  puma_model_3d.urdf.xacro
puma_minipc/puma_nav_manager/: CMakeLists.txt  README.md  package.xml  setup.py
puma_minipc/puma_nav_manager/action/: ImportExportPlan.action  LocalizationManager.action  WaypointsManager.action
puma_minipc/puma_nav_manager/nav_path/: default_plan.json  ejemplo_web.json  test2.json  test_initial.json  test_simulation.json
puma_minipc/puma_nav_manager/scripts/: manager_localization_node.py  nav_manager_node.py
puma_minipc/puma_robot_status/: CMakeLists.txt  README.md  package.xml
puma_minipc/puma_robot_status/action/: ChargeManager.action  LightsManager.action  LoggerManager.action  RebootPtz.action  RobotStatistics.action
puma_minipc/puma_robot_status/launch/: all_robot_status.launch  battery_status.launch  charge_manager.launch  lights_manager.launch  logger.launch  robot_statistics.launch  robot_statistics_local.launch
puma_minipc/puma_robot_status/logs/: log sesion -2025-03-10_09-53-39.txt
puma_minipc/puma_robot_status/scripts/: battery_status_node.py  charge_manager_node.py  lights_manager_node.py  logger_manager_node.py  reboot_ptz_node.py  robot_statistics_node.py
puma_minipc/puma_robot_status/statistics/: navigation - 2025-02-21T12:21:59.100872.json  navigation - 2025-02-21T12:26:14.128744.json
puma_msgs/puma_msgs/: CMakeLists.txt  package.xml
puma_robot/puma_robot/: CMakeLists.txt  package.xml
puma_simulation/puma_model/: CMakeLists.txt  package.xml
puma_simulation/puma_model/config/: joint_names_puma_model.yaml
puma_simulation/puma_model/launch/: control.launch  display.launch  gazebo.launch
puma_simulation/puma_model/meshes/: base_link.STL  dir_left_link.STL  dir_right_link.STL  gps_link.STL  imu1_link.STL  wheel_left_back_link.STL  wheel_left_front_link.STL  wheel_right_back_link.STL  wheel_right_front_link.STL
puma_simulation/puma_model/urdf/: puma_model.csv  puma_model.gazebo.xacro  puma_model.urdf  puma_model.urdf.xacro  puma_model_v2_baselink.urdf.xacro
(+779 files in other folders)
