<?xml version="1.0"?>
<package format="2">
  <name>puma_bringup_jetson</name>
  <version>0.0.0</version>
  <description>The puma_bringup_jetson package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="smartbot@todo.todo">smartbot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/puma_bringup_jetson</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>puma_reverse</build_depend>
  <build_depend>puma_parking</build_depend>
  <build_depend>ublox_gps</build_depend>
  <build_depend>puma_reverse</build_depend>
  <build_depend>puma_brake_jetson</build_depend>
  <build_depend>puma_imu_driver</build_depend>
  <build_depend>puma_system_monitor</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
