<?xml version="1.0"?>
<package format="2">
  <name>puma_bringup</name>
  <version>0.2.0</version>
  <description>The puma_bringup package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="smartbot@todo.todo">smartbot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/init_puma</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>puma_controller</build_depend>
  <build_depend>puma_odometry</build_depend>
  <build_depend>puma_tag_detector</build_depend>
  <build_depend>puma_waypoints</build_depend>
  <build_depend>robot_localization</build_depend>

  <!-- <build_depend>ublox_gps</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>puma_odometry</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>puma_model</build_depend>
  <build_depend>puma_model_camera</build_depend> -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
