<?xml version="1.0"?>
<package format="2">
  <name>puma_msgs</name>
  <version>0.1.0</version>
  <description>Metapackage for Puma Msgs</description>

  <maintainer email="puma@todo.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>puma_accelerator_msgs</build_depend>
  <build_depend>puma_arduino_msgs</build_depend>
  <build_depend>puma_brake_msgs</build_depend>
  <build_depend>puma_direction_msgs</build_depend>

  <exec_depend>puma_accelerator_msgs</exec_depend>
  <exec_depend>puma_arduino_msgs</exec_depend>
  <exec_depend>puma_brake_msgs</exec_depend>
  <exec_depend>puma_direction_msgs</exec_depend>
</package>
